--- a/index_v1.html
+++ b/index_v1.html
@@ -3,8 +3,7 @@
   <title>BANGSA JOHOR</title>
    <style type="text/css">
     body{
-    background-color:
-   rgb(255, 255, 255);
+    background-color:blue;
     }
     body,td,th{
            font-family:"Comic Sans MS", cursive;
