--- a/index_v1.html
+++ b/index_v1.html
@@ -3,7 +3,7 @@
   <title>BANGSA JOHOR</title>
    <style type="text/css">
     body{
-    background-color:blue;
+    background-color:red;
     }
     body,td,th{
            font-family:"Comic Sans MS", cursive;
